# pyldt

./: .gitignore  README.md  __init__.py  deveny_ccdproc.py  deveny_cubicspline.py  deveny_extract_modelarcs.py  deveny_flatcombine.py  deveny_imcombine.py  deveny_lambdacal.py  environment.yml  pyldt.py  requirements.txt  setup.cfg  setup.py  trim_oscan.py  twodspec.py  use_ccdproc.py  utils.py
deveny_flexure/: flex_data_DV1.fits  flex_data_DV2.fits  flex_data_DV5.fits  flexure_analysis.py  flexure_analysis_DV1.eps  flexure_analysis_DV2.eps  flexure_analysis_DV5.eps  from_dfocus.py
pyldt/: __init__.py  astrometry.py  flexure.py  imutils.py  reduction.py  twodspec.py  utils.py
source/: conf.py  index.rst
