[metadata]
name = pyldt
description = TEBs collection of data reduction scripts and other python utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Timothy P. Ellsworth Bowers
author_email = tbowers@lowell.edu
license = MPL-2.0
url = https://github.com/tbowers7/pyldt
edit_on_github = False
github_project = tbowers7/pyldt
keywords = pyldt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3=False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    astropy>=4.3
    astroquery
    setuptools
    setuptools_scm
    matplotlib
    numpy>=1.21
    scipy
    ccdproc
    requests
    tqdm
    obstools @ git+https://github.com/LowellObservatory/LDTObserverTools
    # These are required for linting and formatting
    pylint
    black

[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

# [options.entry_points]
# console_scripts =
   
